refactor advanced concurrent class